<resources>
    <string name="app_name">FlorisBoard</string>
    <string name="key__phone_pause" comment="Label for the Pause key in the telephone keyboard layout">Pause</string>
    <string name="key__phone_wait" comment="Label for the Wait key in the telephone keyboard layout">Wait</string>
    <string name="key_popup__threedots_alt" comment="Content description for the three-dots icon in a key popup">Three-dot icon. If visible, indicates that more letters can be used if longer pressed.</string>
    <string name="one_handed__close_btn_content_description" comment="Content description for the one-handed close button">Close one-handed mode.</string>
    <string name="one_handed__move_start_btn_content_description" comment="Content description for the one-handed move to left button">Move keyboard to the left.</string>
    <string name="one_handed__move_end_btn_content_description" comment="Content description for the one-handed move to right button">Move keyboard to the right.</string>
    <string name="private_mode_dialog__title" comment="Title of the private mode dialog">Private mode</string>
    <string name="media__tab__emojis" comment="Tab description for emojis in the media UI">Emojis</string>
    <string name="media__tab__emoticons" comment="Tab description for emoticons in the media UI">Emoticons</string>
    <string name="media__tab__kaomoji" comment="Tab description for kaomoji in the media UI">Kaomoji</string>
    <string name="emoji__category__smileys_emotion" comment="Emoji category name">Smileys &amp; Emotions</string>
    <string name="emoji__category__people_body" comment="Emoji category name">People &amp; Body</string>
    <string name="emoji__category__animals_nature" comment="Emoji category name">Animals &amp; Nature</string>
    <string name="emoji__category__food_drink" comment="Emoji category name">Food &amp; Drink</string>
    <string name="emoji__category__travel_places" comment="Emoji category name">Travel &amp; Places</string>
    <string name="emoji__category__activities" comment="Emoji category name">Activities</string>
    <string name="emoji__category__objects" comment="Emoji category name">Objects</string>
    <string name="emoji__category__symbols" comment="Emoji category name">Symbols</string>
    <string name="emoji__category__flags" comment="Emoji category name">Flags</string>
    <string name="smartbar__quick_action_toggle__alt" comment="Content description for the quick action toggle button in Smartbar">Quick action toggle. If pressed, toggles between the word suggestions and the quick action buttons.</string>
    <string name="smartbar__quick_action__exit_editing" comment="Content-description for the exit editing layout button in Smartbar">Exit text editing panel.</string>
    <string name="smartbar__quick_action__one_handed_mode" comment="Content-description for the one-handed quick action in Smartbar">Toggle the state of the one-handed mode.</string>
    <string name="smartbar__quick_action__open_settings" comment="Content-description for the settings quick action in Smartbar">Open settings.</string>
    <string name="smartbar__quick_action__switch_to_editing_context" comment="Content-description for the editing quick action in Smartbar">Switch to text editing panel.</string>
    <string name="smartbar__quick_action__switch_to_media_context" comment="Content-description for the media quick action in Smartbar">Switch to media input view.</string>
    <string name="smartbar__quick_action__undo" comment="Content-description for the undo quick action in Smartbar">Undo button to reverse the last action</string>
    <string name="smartbar__quick_action__redo" comment="Content-description for the redo quick action in Smartbar">Redo button to reverse the last Undo</string>
    <string name="smartbar__quick_action__private_mode" comment="Content-description for the private mode button in Smartbar">If visible, indicates that private mode is active. When clicked, shows info about the private mode.</string>
    <string name="settings__title" comment="Title of Settings">Settings</string>
    <string name="settings__menu" comment="Hint of top-right three-dot icon in Settings">More options</string>
    <string name="settings__menu_about" translatable="false" comment="Three-dot menu entry for About activity">@string/about__title</string>
    <string name="settings__menu_advanced" translatable="false" comment="Three-dot menu entry for Advanced activity">@string/settings__advanced__title</string>
    <string name="settings__menu_help" comment="Three-dot menu entry for Help and Feedback web link">Help &amp; feedback</string>
    <string name="settings__help" comment="General label for help buttons in Settings">Help</string>
    <string name="settings__navigation__home" comment="Long-press hint of bottom nav item Home in Settings">Home</string>
    <string name="settings__navigation__keyboard" comment="Long-press hint of bottom nav item Keyboard in Settings">Keyboard</string>
    <string name="settings__navigation__typing" comment="Long-press hint of bottom nav item Typing in Settings">Typing</string>
    <string name="settings__navigation__theme" comment="Long-press hint of bottom nav item Theme in Settings">Theme</string>
    <string name="settings__navigation__gestures" comment="Long-press hint of bottom nav item Gestures in Settings">Gestures</string>
    <string name="settings__default" comment="General string which is used when a preference has the default value set">Default</string>
    <string name="settings__system_default" comment="General string which is used when a preference has the system default value set">System default</string>
    <string name="settings__home__title" comment="Title of the Home fragment">Welcome to %s</string>
    <string name="settings__home__ime_not_enabled" comment="Error message shown in Home fragment when FlorisBoard is not enabled in the system">FlorisBoard is not enabled in the system and thus won\'t be available as an input method in the input picker. Click here to resolve this issue.</string>
    <string name="settings__home__ime_not_selected" comment="Warning message shown in Home fragment when FlorisBoard is not selected as the default keyboard">FlorisBoard is not selected as the default input method. Click here to resolve this issue.</string>
    <string name="settings__home__contribute" comment="Contributing message shown in Home fragment">Thanks for using FlorisBoard! This project is still in early-beta and therefore missing features. If you find any bugs or want to make a suggestion, please check out the repo on GitHub and file an issue. This helps making FlorisBoard better. Thank you!</string>
    <string name="settings__localization__title" comment="Title of languages and layout box in the Typing fragment">Languages &amp; Keyboard layouts</string>
    <string name="settings__localization__subtype_no_subtypes_configured_warning" comment="Warning message that no subtype has been defined in the Typing fragment">It seems that you haven\'t configured any subtypes. As a fallback the subtype English/QWERTY will be used!</string>
    <string name="settings__localization__subtype_add" comment="Subtype dialog add button">Add</string>
    <string name="settings__localization__subtype_add_title" comment="Title of subtype dialog when adding a new subtype">Add subtype</string>
    <string name="settings__localization__subtype_apply" comment="Subtype dialog apply button">Apply</string>
    <string name="settings__localization__subtype_cancel" comment="Subtype dialog cancel button">Cancel</string>
    <string name="pref__theme__mode__label" comment="Label of the theme mode preference">Theme mode</string>
    <string name="pref__theme__day" comment="Label of the day group (day means light theme)">Day theme</string>
    <string name="pref__theme__night" comment="Label of the night group (night means dark theme)">Night theme</string>
    <string name="pref__theme__any_theme_adapt_to_app__label" comment="Label of the theme adapt to app preference">Adapt colors to app</string>
    <string name="pref__theme__any_theme_adapt_to_app__summary" comment="Summary of the theme adapt to app preference">Theme colors adapt to those in the current app, if the target app supports this.</string>
    <string name="settings__input_feedback__title" comment="Title of Input Feedback preferences fragment">Sounds &amp; Vibration</string>
    <string name="pref__keyboard__group_keys__label" comment="Preference group title">Keys</string>
    <string name="pref__keyboard__number_row__label" comment="Preference title">Number row</string>
    <string name="pref__keyboard__number_row__summary" comment="Preference summary">Show number row on top of character layout</string>
    <string name="pref__keyboard__hinted_number_row_mode__label" comment="Preference title">Hinted number row</string>
    <string name="pref__keyboard__hinted_symbols_mode__label" comment="Preference title">Hinted symbols</string>
    <string name="pref__keyboard__utility_key_enabled__label" comment="Preference title">Show utility key</string>
    <string name="pref__keyboard__utility_key_enabled__summary" comment="Preference summary">Shows a configurable utility key next to space bar</string>
    <string name="pref__keyboard__utility_key_action__label" comment="Preference title">Utility key action</string>
    <string name="pref__keyboard__merge_hint_popups_enabled__label">Also show symbol popups</string>
    <string name="pref__keyboard_merge_hint_popups_enabled__summary">Add the symbol popups to the default layout</string>
    <string name="pref__keyboard__group_layout__label" comment="Preference group title">Layout</string>
    <string name="pref__keyboard__one_handed_mode__label" comment="Preference title">One-handed mode</string>
    <string name="pref__keyboard__landscape_input_ui_mode__label" comment="Preference value">Landscape fullscreen input</string>
    <string name="pref__keyboard__height_factor__label" comment="Preference title">Keyboard height</string>
    <string name="pref__keyboard__group_keypress__label" comment="Preference group title">Key press</string>
    <string name="pref__keyboard__popup_visible__label" comment="Preference title">PopUp Visibility</string>
    <string name="pref__keyboard__popup_visible__summary" comment="Preference summary">Show popup when you press a key</string>
    <string name="pref__keyboard__space_bar_switches_to_characters__label" comment="Preference title">Space bar switches back to character layout</string>
    <string name="pref__keyboard__space_bar_switches_to_characters__summary" comment="Preference summary">Pressing space bar automatically switches back to characters when in symbols or numeric</string>
    <string name="pref__clipboard__clipboard_category__label">Clipboard</string>
    <string name="pref__clipboard__use_internal_clipboard___label">Use internal clipboard</string>
    <string name="pref__clipboard__use_internal_clipboard_title__summary">Use an internal clipboard instead of the system clipboard</string>
    <string name="pref__clipboard__sync_from_system_clipboard__label">Sync from system clipboard</string>
    <string name="pref__clipboard__keyboard_sync_from_system_clipboard__summary">System clipboard updates also update Floris clipboard</string>
    <string name="pref__clipboard__sync_to_system_clipboard__label">Sync to system clipboard</string>
    <string name="pref__clipboard__sync_to_system_clipboard__summary">Floris clipboard updates also update system clipboard</string>
    <string name="pref__clipboard__enable_clipboard_history__label">Enable clipboard history</string>
    <string name="pref__clipboard__enable_clipboard_history__summary">Retain clipboard items</string>
    <string name="pref__clipboard__clean_up_old_clipboard_items__label">Clean up old items</string>
    <string name="pref__clipboard__limit_history_size__label">Limit history size</string>
</resources>