<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref__keyboard__group_keys__label">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="keyboard__number_row"
            app:iconSpaceReserved="false"
            app:title="@string/pref__keyboard__number_row__label"
            app:summary="@string/pref__keyboard__number_row__summary"/>

        <ListPreference
            android:defaultValue="enabled_smart_priority"
            app:entries="@array/pref__keyboard__hint_mode__entries"
            app:entryValues="@array/pref__keyboard__hint_mode__values"
            app:key="keyboard__hinted_number_row_mode"
            app:iconSpaceReserved="false"
            app:title="@string/pref__keyboard__hinted_number_row_mode__label"
            app:useSimpleSummaryProvider="true"/>

        <ListPreference
            android:defaultValue="enabled_smart_priority"
            app:entries="@array/pref__keyboard__hint_mode__entries"
            app:entryValues="@array/pref__keyboard__hint_mode__values"
            app:key="keyboard__hinted_symbols_mode"
            app:iconSpaceReserved="false"
            app:title="@string/pref__keyboard__hinted_symbols_mode__label"
            app:useSimpleSummaryProvider="true"/>

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="keyboard__utility_key_enabled"
            app:iconSpaceReserved="false"
            app:title="@string/pref__keyboard__utility_key_enabled__label"
            android:summary="@string/pref__keyboard__utility_key_enabled__summary"/>

        <ListPreference
            android:defaultValue="dynamic_switch_language_emojis"
            app:entries="@array/pref__keyboard__utility_key_action__entries"
            app:entryValues="@array/pref__keyboard__utility_key_action__values"
            app:key="keyboard__utility_key_action"
            app:iconSpaceReserved="false"
            app:title="@string/pref__keyboard__utility_key_action__label"
            app:useSimpleSummaryProvider="true"/>

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="keyboard__merge_hint_popups_enabled"
            app:iconSpaceReserved="false"
            app:title="@string/pref__keyboard__merge_hint_popups_enabled__label"
            android:summary="@string/pref__keyboard_merge_hint_popups_enabled__summary"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref__keyboard__group_layout__label">

        <ListPreference
            android:defaultValue="off"
            app:entries="@array/pref__keyboard__one_handed_mode__entries"
            app:entryValues="@array/pref__keyboard__one_handed_mode__values"
            app:key="keyboard__one_handed_mode"
            app:iconSpaceReserved="false"
            app:title="@string/pref__keyboard__one_handed_mode__label"
            app:useSimpleSummaryProvider="true"/>

        <ListPreference
            android:defaultValue="dynamically_show"
            app:entries="@array/pref__keyboard__landscape_input_ui_mode__entries"
            app:entryValues="@array/pref__keyboard__landscape_input_ui_mode__values"
            app:key="keyboard__landscape_input_ui_mode"
            app:iconSpaceReserved="false"
            app:title="@string/pref__keyboard__landscape_input_ui_mode__label"
            app:useSimpleSummaryProvider="true"/>

        <ListPreference
            android:defaultValue="normal"
            app:entries="@array/pref__keyboard__height_factor__entries"
            app:entryValues="@array/pref__keyboard__height_factor__values"
            app:key="keyboard__height_factor"
            app:iconSpaceReserved="false"
            app:title="@string/pref__keyboard__height_factor__label"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref__keyboard__group_keypress__label">

        <Preference
            app:key="keyboard__input_feedback"
            app:iconSpaceReserved="false"
            app:title="@string/settings__input_feedback__title"/>

        <SwitchPreferenceCompat
            android:defaultValue="true"
            app:key="keyboard__popup_enabled"
            app:iconSpaceReserved="false"
            app:title="@string/pref__keyboard__popup_visible__label"
            app:summary="@string/pref__keyboard__popup_visible__summary"/>

        <SwitchPreferenceCompat
            android:defaultValue="true"
            app:key="keyboard__space_bar_switches_to_characters"
            app:iconSpaceReserved="false"
            app:title="@string/pref__keyboard__space_bar_switches_to_characters__label"
            app:summary="@string/pref__keyboard__space_bar_switches_to_characters__summary"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="@string/pref__clipboard__clipboard_category__label">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            app:key="clipboard__enable_internal"
            app:iconSpaceReserved="false"
            app:title="@string/pref__clipboard__use_internal_clipboard___label"
            app:summary="@string/pref__clipboard__use_internal_clipboard_title__summary"/>

        <SwitchPreferenceCompat
            android:dependency="clipboard__enable_internal"
            android:defaultValue="true"
            app:key="clipboard__sync_to_floris"
            app:iconSpaceReserved="false"
            app:title="@string/pref__clipboard__sync_from_system_clipboard__label"
            app:summary="@string/pref__clipboard__keyboard_sync_from_system_clipboard__summary"/>

        <SwitchPreferenceCompat
            android:dependency="clipboard__enable_internal"
            android:defaultValue="false"
            app:key="clipboard__sync_to_system"
            app:iconSpaceReserved="false"
            app:title="@string/pref__clipboard__sync_to_system_clipboard__label"
            app:summary="@string/pref__clipboard__sync_to_system_clipboard__summary"/>

        <SwitchPreferenceCompat
            android:defaultValue="false"
            app:key="clipboard__enable_history"
            app:iconSpaceReserved="false"
            app:title="@string/pref__clipboard__enable_clipboard_history__label"
            app:summary="@string/pref__clipboard__enable_clipboard_history__summary"/>

        <SwitchPreferenceCompat
            android:dependency="clipboard__enable_history"
            android:defaultValue="true"
            app:key="clipboard__clean_up_old"
            app:iconSpaceReserved="false"
            app:title="@string/pref__clipboard__clean_up_old_clipboard_items__label" />

        <SwitchPreferenceCompat
            android:dependency="clipboard__enable_history"
            android:defaultValue="true"
            app:key="clipboard__limit_history_size"
            app:iconSpaceReserved="false"
            app:title="@string/pref__clipboard__limit_history_size__label" />

    </PreferenceCategory>

</PreferenceScreen>
