<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:defaultValue="follow_system"
        app:entries="@array/pref__theme__mode__entries"
        app:entryValues="@array/pref__theme__mode__values"
        app:key="theme__mode"
        app:icon="@drawable/ic_brightness_auto"
        app:title="@string/pref__theme__mode__label"
        app:useSimpleSummaryProvider="true"/>

    <PreferenceCategory
        app:key="theme__day_group"
        app:title="@string/pref__theme__day">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            app:key="theme__day_theme_adapt_to_app"
            app:icon="@drawable/ic_format_paint"
            app:title="@string/pref__theme__any_theme_adapt_to_app__label"
            app:summary="@string/pref__theme__any_theme_adapt_to_app__summary"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:key="theme__night_group"
        app:title="@string/pref__theme__night">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            app:key="theme__night_theme_adapt_to_app"
            app:icon="@drawable/ic_format_paint"
            app:title="@string/pref__theme__any_theme_adapt_to_app__label"
            app:summary="@string/pref__theme__any_theme_adapt_to_app__summary"/>

    </PreferenceCategory>

</PreferenceScreen>
